kubernetes/wordpress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress
  namespace: wordpress
  labels:
    app.kubernetes.io/name: wordpress
  annotations:
    cert-manager.io/cluster-issuer: cert-issuer
spec:
  tls:
    - hosts:
      - wp.wrenspace.dev
  rules:
  - host: wp.wrenspace.dev
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: wordpress
            port: 
              number: 80
